docs(loom): document phase 1 pilot test results
Record VT pilot test results comparing baseline (platform threads) vs
virtual threads enabled:

- Throughput: 160.00 → 160.14 req/s (+0.09%)
- p95 latency: 15.00 → 15.97ms (+6.5%)
- p99 latency: 27.06 → 29.41ms (+8.7%)
- Zero VT pinning events detected

Decision: GO - all success criteria met. VTs show comparable performance
with no pinning issues. Slight latency increase within 10% threshold.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>